--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="layer">
                     <h3>E-Commerce Website</h3>
                     <p>An e-commerce platform for Pet Essentials using HTML, CSS, JS, PHP, SQL</p>
-                    <a href="http://e-commerce-website.free.nf"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://swathipanangipalli.github.io/e-commerce-site/"></i></a>
                 </div>
             </div>
             <div class="highlights">
@@ -222,4 +222,5 @@
     })
   </script>
   </body>
+
 </html>
