--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <img src="images2/img3.jpg" alt="Project 1">
                 <div class="layer">
                     <h3>E-Commerce Website</h3>
-                    <p>An e-commerce platform for Pet Essentials using HTML, CSS, JS, PHP, SQL</p>
-                    <a href="https://swathipanangipalli.github.io/e-commerce-site/"></i></a>
+                    <p>An e-commerce platform for Pet Essentials using HTML, CSS, JS</p>
+                    <a href="https://swathipanangipalli.github.io/e-commerce-site/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="highlights">
@@ -224,4 +224,5 @@
   </body>
 
 </html>
+
 
